# ragbench-cn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: chunk_size_experiment.md  client_comparison.md  day10_log.md  day11_log.md  day12_log.md  day13_log.md  day14_log.md  day15_log.md  day16_log.md  day1_log.md  day2_log.md  day3_log.md  day4_log.md  day5_log.md  day6_log.md  day7_log.md  day8_log.md  day9_log.md  failure_analysis.md  github_release_note.md  html_report.md  interview_notes.md  interview_playbook.md  local_embedding_baseline.md  local_keyword_baseline.md  metrics.md  openai_compatible_client.md  paraphrase_experiment.md  project_brief.md  ragflow_client.md  resume_and_interview.md  top_k_experiment.md  v0_1_checklist.md  v0_2_checklist.md
examples/: questions_paraphrase.json  questions_zh.json
examples/docs/: rag_basics.md  (+1 more)
ragbench/: compare.py  eval.py  html_report.py  metrics.py
reports/: README.md  chunk_size_comparison.json  chunk_size_comparison.md  client_comparison.html  client_comparison.json  client_comparison.md  local_keyword_report.html  local_keyword_report.md  local_keyword_result.json  paraphrase_client_comparison.html  paraphrase_client_comparison.json  paraphrase_client_comparison.md  sample_report.md  sample_result.json  top_k_comparison.html  top_k_comparison.json  top_k_comparison.md
tests/: test_compare.py  test_eval.py  test_html_report.py  test_local_embedding.py  test_local_keyword.py  test_metrics.py  test_openai_compatible.py  test_ragflow.py  test_version.py
(+6 files in other folders)
